[package]
name = "hello_rustpython"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustpython = { git = "https://ghproxy.com/https://github.com/RustPython/RustPython" , features = ["freeze-stdlib"] }